--- a/.github/workflows/test-server.yml
+++ b/.github/workflows/test-server.yml
@@ -10,7 +10,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  audit:
+  setup:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
@@ -18,37 +18,6 @@ jobs:
         uses: pnpm/action-setup@v4
         with:
           version: 10
-      - name: Audit NPM Packages
-        run: |
-          pnpm dlx audit-ci@^7 --directory apps/api --config apps/api/audit-ci.jsonc
-          pnpm dlx audit-ci@^7 --directory apps/playwright-service-ts --config apps/playwright-service-ts/audit-ci.jsonc
-          pnpm dlx audit-ci@^7 --directory apps/test-site --config apps/test-site/audit-ci.jsonc
-
-  # Job seems unused, remove once confirmed
-  # build-images:
-  #   name: Build images
-  #   runs-on: big-runner
-  #   needs: audit
-  #   steps:
-  #     - uses: actions/checkout@v5
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
-  #     - name: Build API image
-  #       run: |
-  #         docker buildx build \
-  #           -t firecrawl/firecrawl:latest \
-  #           --cache-from type=gha \
-  #           --cache-to type=gha,mode=max \
-  #           --load \
-  #           ./apps/api
-  #     - name: Build Playwright image
-  #       run: |
-  #         docker buildx build \
-  #           -t firecrawl/playwright-service:latest \
-  #           --cache-from type=gha \
-  #           --cache-to type=gha,mode=max \
-  #           --load \
-  #           ./apps/playwright-service-ts
 
   self-host:
     name: Self-hosted environment tests
@@ -66,7 +35,7 @@ jobs:
         # search: ["searxng", "google"]
         # ai: ["openai", "no-ai"]
     runs-on: big-runner
-    needs: audit
+    needs: setup
     services:
       redis:
         image: redis
