--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -91,6 +91,7 @@
     "@types/ws": "^8.5.12",
     "ai": "5.0.89",
     "ajv": "^8.16.0",
+    "ajv-formats": "^3.0.1",
     "amqplib": "^0.10.9",
     "async-mutex": "^0.5.0",
     "axios": "^1.12.2",
