--- a/apps/api/native/Cargo.toml
+++ b/apps/api/native/Cargo.toml
@@ -12,7 +12,7 @@ crate-type = ["cdylib"]
 chrono = { version = "0.4", features = ["serde"] }
 kuchikiki = "0.8.2"
 lol_html = "2.6.0"
-lopdf = { git = "https://github.com/J-F-Liu/lopdf", branch = "main" }
+lopdf = { git = "https://github.com/J-F-Liu/lopdf", rev = "e6a78f655bef63ab1e846a549737dbf6e0847432" }
 maud = "0.27.0"
 napi = { version = "3.0.0", features = ["serde-json", "tokio_rt"] }
 napi-derive = "3.0.0"
