--- a/.github/workflows/test-server.yml
+++ b/.github/workflows/test-server.yml
@@ -497,7 +497,7 @@ jobs:
           docker exec foundationdb fdbcli --exec "status" -C /var/fdb/fdb.cluster
 
       - name: Run tests
-        run: pnpm harness pnpm test:snips
+        run: pnpm harness pnpm jest concurrency
         working-directory: apps/api
         env:
           npm_config_ignore_scripts: "true" # required currently to prevent re-building cached native lib
