--- a/apps/playwright-service-ts/Dockerfile
+++ b/apps/playwright-service-ts/Dockerfile
@@ -1,15 +1,18 @@
+# syntax=docker/dockerfile:1.5
 FROM node:18-slim
 
 WORKDIR /usr/src/app
 COPY package*.json ./
-RUN npm install
-
-COPY . .
+RUN --mount=type=cache,target=/root/.npm \
+    npm install
 
 ENV PLAYWRIGHT_BROWSERS_PATH=/usr/local/share/playwright
 
 # Install Playwright dependencies
-RUN npx playwright install chromium --with-deps
+RUN --mount=type=cache,target=/root/.cache/ms-playwright \
+    npx playwright install chromium --with-deps
+
+COPY . .
 
 RUN npm run build
 
